# programming-problems

./: .gitignore  README.md  pyproject.toml
advent-of-code/2023/one/: one.bash  one.js  one.py  one.rs
advent-of-code/2023/two/: two.ts
advent-of-code/utils/: download-aoc-file.bash
languages/bash/advent-of-code/2023/: one.bash
languages/javascript/advent-of-code/2023/: one.js
languages/lua/advent-of-code/2023/: one.lua
languages/python/: test_for.py  test_for_py.bash
languages/python/advent-of-code/2023/: one.py
languages/typescript/: README.md  bun.lockb  jest.config.ts  package.json  tsconfig.json
languages/typescript/advent-of-code/2023/: three.ts  two.ts
languages/typescript/tests/: utils.test.ts
languages/typescript/utils/: const.ts  enums.ts  utils.ts
leetcode/: longest_common_prefix.py  max_number_of_k_sum_pairs.py  merge_strings_alternatively.py  plus_one.py  prob4.ipynb  prob6.ipynb  prob7.ipynb  prob8.ipynb  prob9.ipynb  reverse_words_in_string.py  roman_to_int.py  single_num.py  sqrt.py  utils.py  valid_parentheses.py
others/: p1.py
problems/leetcode/: decode_string.py  merge_strings_alternatively.py  prob1.ipynb  prob2.ipynb  prob3.ipynb  prob5.ipynb  sqrt.py  sum_of_left_leaves.py  unique_number_of_occurences.py
utils/: download-aoc-file.bash  leetcode_tester.py
